test/ui/src/compile_fail/std/emit_props_key_non_str.rs
fn main() {
    emit::emit!("template", #[emit::key(name: 42)] a: "some value");
}
